--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "electron": "^10.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.0"
   },
   "scripts": {
     "electron-dev": "ELECTRON_START_URL=http://localhost:3000 electron .",
